src/main/java/syntactic/test/failing/uppercaseAttribute.ru
struct Hola {
    pri Int A;
}

start{}